--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Avocado";
+  src: url("./assets/fonts/LT_avocado/LTAvocado-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "AvocadoBold";
+  src: url("./assets/fonts/LT_avocado/LTAvocado-Bold.ttf") format("truetype");
+  font-weight: 800;
+  font-style: bold;
+}
+
+@font-face {
+  font-family: "Veritas";
+  src: url("./assets/fonts/lt_veritas/LTVeritas-Regular.ttf") format("truetype");
+  font-weight: 400; /* Regular */
+  font-style: normal;
+}
+
+@layer components {
+  h1 {
+    @apply font-avocadobold text-3xl;
+  }
+
+  a {
+    @apply font-veritas text-lg;
+  }
+}
