--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,23 @@
 }
 
 @layer components {
+  body {
+    @apply bg-light;
+  }
+
   h1 {
-    @apply font-avocadobold text-3xl;
+    @apply font-avocadobold text-dark;
+  }
+
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-avocado text-dark;
   }
 
   a {
-    @apply font-veritas text-lg;
+    @apply font-veritas text-lg text-dark;
   }
 }
